[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Menu.png" type="Texture" id=1]
[ext_resource path="res://UI/Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 69.0
margin_top = 366.0
margin_right = 189.0
margin_bottom = 417.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 68.8216
margin_top = 445.579
margin_right = 188.822
margin_bottom = 496.579
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
