[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]
[ext_resource path="res://UI/Win.png" type="Texture" id=2]

[node name="You Win" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.380392, 0.223529, 0.517647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Sprite" parent="."]
position = Vector2( 512.546, 300.73 )
scale = Vector2( 0.586934, 0.594703 )
texture = ExtResource( 2 )

[node name="Menu" type="Button" parent="."]
margin_left = 655.518
margin_top = 371.535
margin_right = 835.518
margin_bottom = 452.535
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
